--- a/imports/ui/pages/dashboard.html
+++ b/imports/ui/pages/dashboard.html
@@ -9,7 +9,9 @@
 
 
             {{#pageTitle title="Panel de Control Principal"}}
-            <h2> {{companyName workfor}} </h2>
+            <h2> 
+              <img src="{{companyName workfor}}" alt="" />
+               </h2>
 
             {{/pageTitle}}
       
