--- a/imports/ui/panels/receivables-panel.html
+++ b/imports/ui/panels/receivables-panel.html
@@ -1,5 +1,5 @@
-<template name="Customers_panel">
-  {{#panel title=(_ "Customers") panelClass="stats" color="hviolet"}}
+<template name="Receivables_panel">
+  {{#panel title=(_ "Receivables") panelClass="stats" color="hgreen"}}
     {{#if selectedCompany}}
     <div class="list-item">
     
