--- a/imports/ui/pages/treasury-show-page.html
+++ b/imports/ui/pages/treasury-show-page.html
@@ -1,7 +1,7 @@
 
 
 <template name="Treasury_show_page">
-
+<!-- {{#if Templates.subscriptionsReady}} -->
     {{#staggering}}
 
         <div class="">
@@ -55,4 +55,7 @@
           
         </div>
     {{/staggering}}
+    <!-- {{else}}
+    {{_ "Loading"}}
+    {{/if}} -->
 </template>
