--- a/imports/ui/panels/cash-assets-panel.html
+++ b/imports/ui/panels/cash-assets-panel.html
@@ -1,5 +1,5 @@
 <template name="CashAssets_panel">
-  {{#panel title=(_ "Cash Assets") panelClass="stats" color="hblue"}}
+  {{#panel title=(_ "Cash assets") panelClass="stats" color="hblue"}}
 
   <div class="table-responsive">
     <table cellpadding="1" cellspacing="1" class="table table-condensed table-striped">
