--- a/imports/ui/panels/sales-performance-panel.html
+++ b/imports/ui/panels/sales-performance-panel.html
@@ -1,15 +1,13 @@
-<template name="Receivables_panel">
-  {{#panel title=(_ "Receivables") panelClass="stats" color="hgreen"}}
-  {{#if Template.subscriptionsReady}}
-  <!-- {{#each aa in owes}} -->
+<template name="SalesPerformance_panel">
+  {{#panel title=(_ "Sales performance") color='hgreen'}}
+  {{#each pc in profitCenters}}
 <!-- {{#let perf=performance pc._id }} -->
     
   <div class="table-responsive">
-    <h3>{{_ 'Customers balance'}} : {{receivable}}</h3>
-    <!-- <h3>{{companyName aa.origin}} {{aa.value}}</h3> -->
-    <!-- <h5>{{_ "Amount sold"}} : {{amountSold pc._id}}</h5>
+    <h3>{{pc.name}}</h3>
+    <h5>{{_ "Amount sold"}} : {{amountSold pc._id}}</h5>
     <h5>{{_ "Revenue"}} : {{revenue pc._id}}</h5>
-                            <table cellpadding="1" cellspacing="1" class="table table-condensed table-striped">
+                            <!-- <table cellpadding="1" cellspacing="1" class="table table-condensed table-striped">
                                 <thead>
                                 <tr>
                                     <th>{{_ "Item"}}</th>
@@ -32,9 +30,8 @@
                             </table> -->
                         </div>
                         
-                        <!-- {{/each}} -->
-                        {{else}}
-                        {{_ "Loading"}}
-                        {{/if}}
-{{/panel}}
+                        {{/each}}
+
+
+  {{/panel}}
 </template>
